--- a/templates/index.html
+++ b/templates/index.html
@@ -85,90 +85,53 @@
                 <div class="carousel-item active">
                     <div class="container-fluid">
                         <div class="row">
+                            {% for coffee in list1 %}
+
+
                             <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-1.png' %}"></div>
-                                <h3 class="types_text">TYPES OF COFFEE</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
+                                <div class="coffee_img"><img src="{{coffee.img.url}}"></div>
+                                <h3 class="types_text">{{coffee.name}}</h3>
+                                <p class="looking_text">{{coffee.description}}</p>
+                                <div class="read_bt"><a href="/order/{{coffee.id}}">Order</a></div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-2.png' %}"></div>
-                                <h3 class="types_text">BEAN VARIETIES</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-3.png' %}"></div>
-                                <h3 class="types_text">COFFEE & PASTRY</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-4.png' %}"></div>
-                                <h3 class="types_text">COFFEE TO GO</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
+
+                            {% endfor %}
+
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="container-fluid">
                         <div class="row">
+                            {% for coffee in list2 %}
+
+
                             <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-1.png' %}"></div>
-                                <h3 class="types_text">TYPES OF COFFEE</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
+                                <div class="coffee_img"><img src="{{coffee.img.url}}"></div>
+                                <h3 class="types_text">{{coffee.name}}</h3>
+                                <p class="looking_text">{{coffee.description}}</p>
+                                <div class="read_bt"><a href="/order/{{coffee.id}}">Order</a></div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-2.png' %}"></div>
-                                <h3 class="types_text">BEAN VARIETIES</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-3.png' %}"></div>
-                                <h3 class="types_text">COFFEE & PASTRY</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-4.png' %}"></div>
-                                <h3 class="types_text">COFFEE TO GO</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
+
+                            {% endfor %}
+
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="container-fluid">
                         <div class="row">
+                            {% for coffee in list3 %}
+
+
                             <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-1.png' %}"></div>
-                                <h3 class="types_text">TYPES OF COFFEE</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
+                                <div class="coffee_img"><img src="{{coffee.img.url}}"></div>
+                                <h3 class="types_text">{{coffee.name}}</h3>
+                                <p class="looking_text">{{coffee.description}}</p>
+                                <div class="read_bt"><a href="/order/{{coffee.id}}">Order</a></div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-2.png' %}"></div>
-                                <h3 class="types_text">BEAN VARIETIES</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-3.png' %}"></div>
-                                <h3 class="types_text">COFFEE & PASTRY</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="{% static 'images/img-4.png' %}"></div>
-                                <h3 class="types_text">COFFEE TO GO</h3>
-                                <p class="looking_text">looking at its layout. The point of</p>
-                                <div class="read_bt"><a href="#">Read More</a></div>
-                            </div>
+
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -204,47 +167,6 @@
     </div>
 </div>
 <!-- about section end -->
-<!-- client section start -->
-<div class="client_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="about_taital">What syas customers</h1>
-                <div class="bulit_icon"><img src="{% static 'images/bulit-icon.png' %}"></div>
-            </div>
-        </div>
-        <div class="client_section_2">
-            <div class="client_taital_main">
-                <div class="client_left">
-                    <div class="client_img"><img src="{% static 'images/client-img1.png' %}"></div>
-                </div>
-                <div class="client_right">
-                    <h3 class="moark_text">Joy Moark</h3>
-                    <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
-                </div>
-            </div>
-            <div class="client_taital_main">
-                <div class="client_left">
-                    <div class="client_img"><img src="{% static 'images/client-img2.png' %}"></div>
-                </div>
-                <div class="client_right">
-                    <h3 class="moark_text">Mihacal</h3>
-                    <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
-                </div>
-            </div>
-            <div class="client_taital_main">
-                <div class="client_left">
-                    <div class="client_img"><img src="{% static 'images/client-img3.png' %}"></div>
-                </div>
-                <div class="client_right">
-                    <h3 class="moark_text">Uliya den</h3>
-                    <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- client section end -->
 <!-- blog section start -->
 <div class="blog_section layout_padding">
     <div class="container">
@@ -256,26 +178,18 @@
         </div>
         <div class="blog_section_2">
             <div class="row">
+                {% for blog in blogs %}
+
                 <div class="col-md-6">
                     <div class="blog_box">
-                        <div class="blog_img"><img src="{% static 'images/blog-img1.png' %}"></div>
-                        <h4 class="date_text">05 April</h4>
-                        <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum
-                            is that it has a more</p>
+                        <div class="blog_img"><img src="{{blog.img.url}}"></div>
+                        <h4 class="date_text">{{blog.date}}</h4>
+                        <h4 class="prep_text">{{blog.name}}</h4>
+                        <p class="lorem_text">{{blog.description}}</p>
                     </div>
-                    <div class="read_bt"><a href="#">Read More</a></div>
                 </div>
-                <div class="col-md-6">
-                    <div class="blog_box">
-                        <div class="blog_img"><img src="{% static 'images/blog-img2.png' %}"></div>
-                        <h4 class="date_text">05 April</h4>
-                        <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum
-                            is that it has a more</p>
-                    </div>
-                    <div class="read_bt"><a href="#">Read More</a></div>
-                </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
@@ -301,11 +215,6 @@
                         <input type="text" class="mail_text" placeholder="Your Phone" name="Your Phone">
                         <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
                         <div class="send_bt"><a href="#">SEND</a></div>
-                    </div>
-                </div>
-                <div class="map_main">
-                    <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="250" height="500" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
