--- a/templates/base.html
+++ b/templates/base.html
@@ -58,12 +58,25 @@
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
+                        {% if user.is_authenticated %}
+
                         <div class="login_bt">
                             <ul>
-                                <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
-                                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                                <li><a href="/logout">Logout</a></li>
                             </ul>
                         </div>
+                        {% else %}
+                        <div class="login_bt">
+                            <ul>
+                                <li><a href="/login"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
+                            </ul>
+                        </div>
+                        <div class="login_bt">
+                            <ul>
+                                <li><a href="/signup">Signup</a></li>
+                            </ul>
+                        </div>
+                        {% endif %}
                     </form>
                 </div>
             </nav>
