--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,26 +11,18 @@
         </div>
         <div class="blog_section_2">
             <div class="row">
+                {% for blog in blogs %}
+
                 <div class="col-md-6">
                     <div class="blog_box">
-                        <div class="blog_img"><img src="{% static 'images/blog-img1.png' %}"></div>
-                        <h4 class="date_text">05 April</h4>
-                        <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum
-                            is that it has a more</p>
+                        <div class="blog_img"><img src="{{blog.img.url}}"></div>
+                        <h4 class="date_text">{{blog.date}}</h4>
+                        <h4 class="prep_text">{{blog.name}}</h4>
+                        <p class="lorem_text">{{blog.description}}</p>
                     </div>
-                    <div class="read_bt"><a href="#">Read More</a></div>
                 </div>
-                <div class="col-md-6">
-                    <div class="blog_box">
-                        <div class="blog_img"><img src="{% static 'images/blog-img2.png' %}"></div>
-                        <h4 class="date_text">05 April</h4>
-                        <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum
-                            is that it has a more</p>
-                    </div>
-                    <div class="read_bt"><a href="#">Read More</a></div>
-                </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
