--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="contact_taital">Sign Up</h1>
+                <h1 class="contact_taital">Login</h1>
                 <div class="bulit_icon"><img src="{% static 'images/bulit-icon.png' %}"></div>
             </div>
         </div>
@@ -14,15 +14,15 @@
         <div class="contact_section_2">
             <div class="row">
                 <div class="col-md-12">
-                    <form action="/signup" method="post">
+                    <form action="/login" method="post">
                         {% csrf_token %}
                         <div class="mail_section_1">
-                            <input type="text" class="mail_text" placeholder="Your Name" name="name">
                             <input type="text" class="mail_text" placeholder="Your Email" name="email">
                             <input type="password" class="mail_text" placeholder="Password" name="password">
-                            <input type="password" class="mail_text" placeholder="Confirm Password" name="confirm_password">
+                            <br>
+                            <br>
                             <div class="send_bt">
-                                <input type="submit" value="Create Account" class="send_bt">
+                                <input type="submit" value="Login" class="send_bt">
                             </div>
                     </form>
                     </div>
