--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,6 @@
                     </div>
                 </div>
                 {% endfor %}
-
             </div>
         </div>
     </div>
@@ -209,13 +208,18 @@
         <div class="contact_section_2">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="mail_section_1">
-                        <input type="text" class="mail_text" placeholder="Your Name" name="Your Name">
-                        <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <input type="text" class="mail_text" placeholder="Your Phone" name="Your Phone">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
-                    </div>
+                    <form action="/contact" method="POST">
+                        {% csrf_token %}
+                        <div class="mail_section_1">
+                            <input type="text" class="mail_text" placeholder="Your Name" name="name">
+                            <input type="text" class="mail_text" placeholder="Your Email" name="email">
+                            <input type="text" class="mail_text" placeholder="Your Phone" name="phone_no">
+                            <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="message"></textarea>
+                            <div class="send_bt">
+                                <input type="submit" value=" Send ">
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
